# app-platform

./: .gitignore  CONTRIBUTING.md  CodeFormatterFromIdea.xml  License.txt  README.md  SECURITY.md  package-lock.json  pom.xml
framework/data-bus/core/: .gitignore  CMakeLists.txt  build.sh  config.json.example  readme.md
framework/data-bus/core/docs/: build.md  docker.md
framework/data-bus/core/scripts/: a3000_init.sh  build_all.sh  build_test.sh  core_init.sh  generate_flatbuffers.sh  pack_a3000.sh  pack_core_docker.sh  prepare_third_party.sh
framework/data-bus/core/src/: CMakeLists.txt  main.cpp
framework/data-bus/core/src/common/: CMakeLists.txt  Constants.h
framework/data-bus/core/src/connection_manager/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h
framework/data-bus/core/src/resource_manager/: ApplyPermissionMemoryInfo.h  ApplyPermissionRequest.h  ApplyPermissionResponse.h  CMakeLists.txt  FtokArgsGenerator.cpp  FtokArgsGenerator.h  MemoryMetadata.h  PermissionHeld.h  ResourceManager.cpp  ResourceManager.h  SharedMemoryInfo.h  UserData.h  UserDataRequest.h  WaitingPermitRequest.h
framework/data-bus/core/src/runtime_manager/: CMakeLists.txt
framework/data-bus/core/src/task_handler/: CMakeLists.txt  Task.h  TaskHandler.cpp  TaskHandler.h  TaskLoop.cpp  TaskLoop.h
framework/data-bus/core/test/: CMakeLists.txt  TestMain.cpp
framework/data-bus/core/test/mock/: MockTaskLoop.h
framework/data-bus/core/test/resource_manager/: FtokArgsGeneratorTest.cpp  ResourceManagerTest.cpp
framework/fit/cpp/: .gitignore  CMakeLists.txt  README.md  build.sh  prepare.sh
framework/fit/cpp/benchmark/: CMakeLists.txt  fitable_discovery_benchmark.cpp  formatter_service_benchmark.cpp  function_proxy_benchmark.cpp  proxy_client_benchmark.cpp  remote_invoke_benchmark.cpp
framework/fit/cpp/benchmark/performance_test/: CMakeLists.txt  online_offline_benchmark.cpp  performance_test.cpp  prepare_data.h  query_benchmark.cpp  rigister_unregister_benchmark.cpp  subscribe_unsubscribe_benchmark.cpp
framework/fit/cpp/benchmark/prepared_data/: fitable_helper.hpp
framework/fit/cpp/cmake/: toolchain.cmake
framework/fit/cpp/docker/: Dockerfile
framework/fit/cpp/include/fit/: fit_code.h  fit_code_helper.h  fit_define_c.h  fit_log.h  securec.h  value.hpp
framework/fit/cpp/plugin/: CMakeLists.txt  fit.yaml
framework/fit/cpp/plugin/fit_broker_http/: CMakeLists.txt  http_activator.cpp  http_client.hpp  http_config.hpp  http_manager.cpp  http_manager.hpp  http_request_response.cpp  http_server.cpp  http_server.hpp  http_util.hpp  httplib_util.cpp  httplib_util.hpp  libFitPlugin_broker_http.genericables.json  libFitPlugin_broker_http.json
framework/fit/cpp/plugin/fit_crypto_scc/: CMakeLists.txt  crypto_scc_activator.cpp  libfit_crypto_scc.json  scc_client.cpp  scc_client.h  scc_crypto.h
framework/fit/cpp/plugin/fit_dependency/: .gitignore  CMakeLists.txt
framework/fit/cpp/plugin/heartbeat_client/: CMakeLists.txt  OfflineHeartbeat.cpp  OnlineHeartbeat.cpp  activator.cpp  libFitPlugin_heartbeat_client.genericables.json  libfit_plugin_fit_heartbeat_client_default.mf
framework/fit/cpp/plugin/heartbeat_server/: CMakeLists.txt  heartbeat_server.cpp  is_alive.cpp  leave.cpp  libFitPlugin_heartbeat_server.genericables.json  query_heartbeat_address_list.cpp  subscribe_heartbeat.cpp  unsubscribe_heartbeat.cpp
framework/fit/cpp/plugin/heartbeat_server_entity/: CMakeLists.txt  fit_scene_publisher.cpp  fit_scene_subscriber.cpp
framework/fit/cpp/plugin/heartbeat_server_repository_memory/: CMakeLists.txt  fit_heartbeat_test_factory.cpp
framework/fit/cpp/plugin/loadbalance/: CMakeLists.txt  fit.ide.yaml  fit_dependency.json  libFitPlugin_loadbalance.genericables.json
framework/fit/cpp/plugin/registry_address_config/: CMakeLists.txt  activator.cpp  config.cpp  config.h  fit_dependency.json  get_registry_addresses.cpp  libFitPlugin_registry_address_config.genericables.json  libFitPlugin_registry_address_config.json  remove_resgitry_address_default.cpp  set_registry_address_core.cpp
framework/fit/cpp/plugin/registry_listener/: CMakeLists.txt  fit.ide.yaml  fit_dependency.json  libFitPlugin_registry_listener.genericables.json  libFitPlugin_registry_listener.json
framework/fit/cpp/plugin/registry_server/: CMakeLists.txt  activator.cpp  fit.ide.yaml  fit_dependency.json  heartbeat_address_change.cpp  libFitPlugin_registry_server.genericables.json  libFitPlugin_registry_server.json  query_all_workers.cpp  query_fitables_addresses.cpp  query_running_fitables.cpp  query_worker_detail.cpp  register_fitables.cpp  subscribe_fitables.cpp  sync_subscription_fit_service.cpp  synchronize_fit_service.cpp  unregister_fitables.cpp  unsubscribe_fitables.cpp
framework/fit/cpp/plugin/registry_server_repository_memory/: CMakeLists.txt
framework/fit/cpp/plugin/registry_server_repository_pg/: CMakeLists.txt  libregistry_server_repository_pg.json  registry_server_repository_pg_activator.cpp
framework/fit/cpp/plugin/secure_access/: CMakeLists.txt  libFitPlugin_SecureAccess.genericables.json  libFitPlugin_SecureAccess.json
framework/fit/cpp/plugin/system_property/: CMakeLists.txt  activator.cpp  get_application_extensions.cpp  get_external_addresses.cpp  get_local_addresses.cpp  get_registry_matched_address.cpp  get_system_property.cpp  get_worker_extensions.cpp  libFitPlugin_system_property.genericables.json  set_local_addresses.cpp  set_registry_matched_address.cpp  set_system_property.cpp
framework/fit/cpp/src/: CMakeLists.txt  fit.ide.yaml  fit_dependency.json
framework/fit/cpp/src/broker/: CMakeLists.txt
framework/fit/cpp/src/configuration/: broker_configuration.json  fit_config_center.json  fit_registry.json  fit_registry_node2.json  fit_startup.json  fit_worker_http.json  startup.sh  worker_config.json
framework/fit/cpp/src/framework/: CMakeLists.txt  default_formatter_repo.cpp  default_formatter_repo.hpp  default_formatter_service.cpp  default_formatter_service.hpp  fitable_discovery.cpp  (+10 more)
framework/fit/cpp/test/: CMakeLists.txt  FitPluginsTest.cpp
(+16996 files in other folders)
